Criação da estrutura de domain
Criação da estrutura de domain

--- a/Its.Me.AleSeixas.Architeture.example/appsettings.json
+++ b/Its.Me.AleSeixas.Architeture.example/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ApplicationSettings": {
+    "CorsOrigins": "#{CorsOrigins}#",
+    "CorsPolicy": "#{CorsPolicy}#",
+    "AppToken": "#{AppToken}#",
+    "Sentry": "#{Sentry}#",
+    "Project": "#{Project}#",
+    "DatabaseType": "#{DatabaseType}#",
+    "ProcessPath": "#{ProcessPath}#",
+    "Api": "#{Api}#"
+  }
 }
