--- a/Its.Me.AleSeixas.Architeture.example/Its.Me.AleSeixas.Architeture.Example.csproj
+++ b/Its.Me.AleSeixas.Architeture.example/Its.Me.AleSeixas.Architeture.Example.csproj
@@ -8,7 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
+    <PackageReference Include="Sentry.AspNetCore" Version="4.12.0" />
+    <PackageReference Include="Sentry.Profiling" Version="4.12.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\itsmealeseixas.architeture.api\itsmealeseixas.architeture.api.csproj" />
+    <ProjectReference Include="..\itsmealeseixas.architeture.utilities\itsmealeseixas.architeture.utilities.csproj" />
   </ItemGroup>
 
 </Project>
